# CodeRatchet

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  get_most_recently_broken_ratchets.py  get_ratchets_broken_in_files_i_touched.py  pylintrc  pyproject.toml  ratchet_pylint.py  ratchet_rules.py  ratchet_utils.py  ratchet_values.json  readme.md  setup.py  test_all_ratchets.py  test_ratchet_excludes.py
coderatchet/: __init__.py
coderatchet/core/: __init__.py  comparison.py  config.py  errors.py  git_integration.py  ratchet.py  ratchets.py  recent_failures.py  test_failure.py  utils.py
coderatchet/examples/: README.md  __init__.py
coderatchet/examples/advanced/: __init__.py  ci_integration.py  configuration.py
coderatchet/examples/basic_usage/: __init__.py  basic_ratchets.py  custom_ratchets.py
coderatchet/examples/configs/: README.md  __init__.py  base.yaml  basic.yaml  custom.yaml  relaxed.yaml  strict.yaml
coderatchet/tests/advanced/: __init__.py  test_ci_integration.py  test_example_config.py
coderatchet/tests/integration/: test_git_integration.py  test_integration.py
coderatchet/tests/performance/: test_performance.py
coderatchet/tests/scenarios/: test_additional_scenarios.py  test_real_world_performance.py  test_real_world_scenarios.py
coderatchet/tests/security/: test_security.py
coderatchet/tests/unit/: test_common.py  test_comparison.py  test_config_handling.py  test_configuration.py  test_core.py  test_core_config.py  test_error_handling.py  test_git.py  test_git_integration_unit.py  test_ratchet.py  test_ratchet_edge_cases.py  test_recent_failures.py  (+1 more)
coderatchet/utils/: __init__.py  logger.py
docs/: README.md
docs/advanced/: custom_ratchets.md  performance.md  security.md
docs/api/: cli.md  config.md  core.md
docs/cli/: commands.md
docs/contributing/: code_style.md  development.md  testing.md
docs/core_concepts/: configuration.md  ratchet_tests.md
docs/getting_started/: installation.md  quick_start.md
docs/troubleshooting/: common_issues.md
